--- a/src/App.css
+++ b/src/App.css
@@ -192,3 +192,8 @@ span {
 .social-links div:active {
     box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
 }
+
+
+.custom_font_size {
+    font-size: 10px;
+}
