--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,6 @@ body {
 .wrapper {
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background: #ebecf0;
     overflow: hidden;
 }
@@ -196,4 +193,29 @@ span {
 
 .custom_font_size {
     font-size: 10px;
+}
+
+@media only screen and (max-width: 640px) {
+    .container {
+        width: 100%;
+    }
+
+    form {
+        padding: 0 10px;
+    }
+
+    form input {
+        width: 100%;
+    }
+
+    .button,
+    button {
+        padding: 10px 20px !important;
+        font-size: 11px !important;
+    }
+
+    .overlay-right,
+    .overlay-left {
+        padding: 0 20px;
+    }
 }
